@@ -1,5 +1,5 @@
 <?php
-// $Id: panels.module,v 1.28.2.101 2010/08/10 19:35:59 merlinofchaos Exp $
+// $Id: panels.module,v 1.28.2.102 2010/08/10 23:25:19 merlinofchaos Exp $
 
 /**
  * @file panels.module
@@ -7,7 +7,7 @@
  * Core functionality for the Panels engine.
  */
 
-define('PANELS_REQUIRED_CTOOLS_API', '1.7.2');
+define('PANELS_REQUIRED_CTOOLS_API', '1.8');
 
 define('PANELS_TITLE_FIXED', 0); // Hide title use to be true/false. So false remains old behavior.
 define('PANELS_TITLE_NONE', 1); // And true meant no title.
