@@ -10,6 +10,7 @@ In Flexible, the "class" would not stick when adding a new region/row/column but
 #873224 by thsutton: hook_requirements() could cause notice error.
 #867340 by cedarm: Restore removed but deprecated panels_render_layout() function.
 #871942 by dwatson: Invalid CSS made dragger image not appear during IPE.
+#867864: Fix a admin title and edit link problems with custom content types.
 
 Panels 6.x-3.7 (2010-Jul-26)
 ==============
